@@ -1,3 +1,3 @@
 module ScaleDown
-  VERSION = "0.2.1"
+  VERSION = "0.2.2"
 end
