@@ -17,7 +17,6 @@ Gem::Specification.new do |s|
   s.add_dependency "rmagick", ">= 2.1"
   s.add_dependency "sinatra", ">= 1.0"
   s.add_dependency "ruby-hmac", ">= 0.4.0"
-  s.add_dependency "mini_magick", ">= 2.3"
 
   s.add_development_dependency "contest", ">= 0.1.2"
   s.add_development_dependency "mocha", "0.9.8"
