@@ -52,10 +52,16 @@ class ScaleDown::Test < Test::Unit::TestCase
         FileUtils.rm_r("/tmp/scale_down")
       end
 
+      should "get image info" do
+        FileUtils.cp tests_path("files/cmyk.tif"), "/tmp/scale_down/test_images/example_1/long name .tiff"
+        get "/test_images/example_1/#{CGI.escape 'long name .tiff'}/info"
+        assert_equal "300x500", last_response.body
+      end
+
       should "get an image and scale it" do
         valid_get '/400x300-cropped/test_images/example_1/graphic.png'
         assert_equal 301, last_response.status
-        assert_equal "/test_images/example_1/scaled/graphic-400x300-cropped.png", last_response["Location"]
+        assert_match "/test_images/example_1/scaled/graphic-400x300-cropped.png", last_response["Location"]
         assert File.exists?("/tmp/scale_down/test_images/example_1/scaled/graphic-400x300-cropped.png")
       end
 
